[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/ActionSelector/PlayerExtra.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/wizard/WizardExtra.gd" type="Script" id=2]
[ext_resource path="res://theme.tres" type="Theme" id=3]
[ext_resource path="res://ui/8Way/8Way.tscn" type="PackedScene" id=4]

[node name="WizardExtra" instance=ExtResource( 1 )]
alignment = 1
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="." index="0"]
margin_left = 290.0
margin_right = 350.0
margin_bottom = 360.0
alignment = 1

[node name="Control" type="Control" parent="VBoxContainer" index="0"]
margin_top = 156.0
margin_right = 60.0
margin_bottom = 156.0
rect_min_size = Vector2( 60, 0 )

[node name="OrbPush" parent="VBoxContainer/Control" index="0" instance=ExtResource( 4 )]
unique_name_in_owner = true
margin_left = 5.0
margin_top = -61.0
margin_right = 55.0
margin_bottom = 1.0
alignment = 1

[node name="HoverButton" type="CheckButton" parent="VBoxContainer" index="1"]
unique_name_in_owner = true
margin_top = 160.0
margin_right = 60.0
margin_bottom = 180.0
rect_min_size = Vector2( 34, 20 )
size_flags_vertical = 0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.392157, 0.823529, 0.419608, 1 )
text = "Hover"

[node name="FastFallButton" type="CheckButton" parent="VBoxContainer" index="2"]
unique_name_in_owner = true
margin_top = 184.0
margin_right = 60.0
margin_bottom = 204.0
rect_min_size = Vector2( 34, 20 )
size_flags_vertical = 0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.392157, 0.823529, 0.419608, 1 )
text = "FastFall"
